recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:11: error: ';' expected but '{' found.
    if (steps == 1) {} {
                       ^